single_layout_done

--- a/header.html
+++ b/header.html
@@ -17,7 +17,7 @@
             <!-- header-bot -->
             <div class="col-md-6 agileits-social top_content">
                 <ul class="social-nav model-3d-0 footer-social w3_agile_social">
-                    <li class="share">Share On : </li>
+                    <li class="share">Follow On : </li>
                     <li><a href="#" class="facebook">
                         <div class="front"><i class="fa fa-facebook" aria-hidden="true"></i></div>
                         <div class="back"><i class="fa fa-facebook" aria-hidden="true"></i></div></a></li>
@@ -58,72 +58,8 @@
                         <div class="collapse navbar-collapse menu--shylock" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav menu__list">
                                 <li class="active menu__item menu__item--current"><a class="menu__link" href="index.html">Home <span class="sr-only">(current)</span></a></li>
-                                <li class="dropdown menu__item">
-                                    <a href="#" class="dropdown-toggle menu__link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Women's Upper <span class="caret"></span></a>
-                                    <ul class="dropdown-menu multi-column columns-3">
-                                        <div class="agile_inner_drop_nav_info">
-                                            <div class="col-sm-3 multi-gd-img">
-                                                <ul class="multi-column-dropdown">
-                                                    <li><a href="womens.html">Regular</a></li>
-                                                    <li><a href="womens.html">Formal</a></li>
-                                                    <li><a href="womens.html">Party Wear</a></li>
-                                                    <li><a href="womens.html">Casual</a></li>
-
-                                                </ul>
-                                            </div>
-
-                                            <div class="col-sm-9 multi-gd-img multi-gd-text ">
-                                                <a href="womens.html"><img src="images/top1.jpg" alt=" "/></a>
-                                            </div>
-                                            <div class="clearfix"></div>
-                                        </div>
-                                    </ul>
-                                </li>
-                                <li class="dropdown menu__item">
-                                    <a href="#" class="dropdown-toggle menu__link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Women's Lower <span class="caret"></span></a>
-                                    <ul class="dropdown-menu multi-column columns-3">
-                                        <div class="agile_inner_drop_nav_info">
-                                            <div class="col-sm-3 multi-gd-img">
-                                                <ul class="multi-column-dropdown">
-                                                    <li><a href="womens.html">Trousers</a></li>
-                                                    <li><a href="womens.html">Jeans</a></li>
-                                                    <li><a href="womens.html">Capris</a></li>
-                                                    <li><a href="womens.html">Shorts</a></li>
-                                                    <li><a href="womens.html">Skirts</a></li>
-                                                    <li><a href="womens.html">Palazzo</a></li>
-                                                </ul>
-                                            </div>
-
-                                            <div class="col-sm-9 multi-gd-img multi-gd-text ">
-                                                <a href="womens.html"><img src="images/top1.jpg" alt=" "/></a>
-                                            </div>
-                                            <div class="clearfix"></div>
-                                        </div>
-                                    </ul>
-                                </li>
-                                <li class="dropdown menu__item">
-                                    <a href="#" class="dropdown-toggle menu__link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Women's Dress <span class="caret"></span></a>
-                                    <ul class="dropdown-menu multi-column columns-3">
-                                        <div class="agile_inner_drop_nav_info">
-                                            <div class="col-sm-3 multi-gd-img">
-                                                <ul class="multi-column-dropdown">
-                                                    <li><a href="womens.html">Formal</a></li>
-                                                    <li><a href="womens.html">Party</a></li>
-                                                    <li><a href="womens.html">Ethnic</a></li>
-                                                    <li><a href="womens.html">Casual</a></li>
-                                                    <li><a href="womens.html">Jumpsuits</a></li>
-                                                    <li><a href="womens.html">Dungarees</a></li>
-                                                </ul>
-                                            </div>
-
-                                            <div class="col-sm-9 multi-gd-img multi-gd-text ">
-                                                <a href="womens.html"><img src="images/top1.jpg" alt=" "/></a>
-                                            </div>
-                                            <div class="clearfix"></div>
-                                        </div>
-                                    </ul>
-                                </li>
-                                <li class=" menu__item"><a class="menu__link" href="contact.html">Contact</a></li>
+                                <li class=" menu__item"><a class="menu__link" href="">Shop</a></li>
+                                <li class=" menu__item"><a class="menu__link" href="">Contact</a></li>
                             </ul>
                         </div>
                     </div>
