data-slider default color added

--- a/single.html
+++ b/single.html
@@ -303,6 +303,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     var perGramPrice = parseFloat(document.getElementById("prod-price").innerText);
     var packageQuantity = parseFloat(document.getElementById("quantity").value);
     document.getElementById("package-price").innerText = ''+(perGramPrice * packageQuantity);
+    $('#slider-1-data .slider-selection').css('background', 'rgb(239,130,71)');
+    $('#slider-2-data .slider-selection').css('background', 'rgb(239,130,71)');
+    $('#slider-3-data .slider-selection').css('background', 'rgb(239,130,71)');
 </script>
 <!-- //onload function -->
 
