--- a/single.html
+++ b/single.html
@@ -306,6 +306,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     $('#slider-1-data .slider-selection').css('background', 'rgb(239,130,71)');
     $('#slider-2-data .slider-selection').css('background', 'rgb(239,130,71)');
     $('#slider-3-data .slider-selection').css('background', 'rgb(239,130,71)');
+    var prodName = localStorage.getItem("prodName");
+    var prodId = localStorage.getItem("prodId");
+    var prodDescription = localStorage.getItem("prodDescription");
+    var prodPrice = localStorage.getItem("prodPrice");
+    console.log(prodName);console.log(prodId);console.log(prodDescription);console.log(prodPrice);
 </script>
 <!-- //onload function -->
 
