--- a/header.html
+++ b/header.html
@@ -12,7 +12,7 @@
             <!--</div>-->
             <!-- header-bot -->
             <div class="col-md-6 logo_agile">
-                <h1><a href="index.html"><span>E</span>lite Shoppy <i class="fa fa-shopping-bag top_logo_agile_bag" aria-hidden="true"></i></a></h1>
+                <h1><a href="index.html"><span>C</span>upp Mart</a></h1> <!--<i class="fa fa-shopping-bag top_logo_agile_bag" aria-hidden="true"></i></a></h1> -->
             </div>
             <!-- header-bot -->
             <div class="col-md-6 agileits-social top_content">
