CTC filter and shopping layout done

--- a/CTC.html
+++ b/CTC.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Elite Shoppy an Ecommerce Online Shopping Category Flat Bootstrap Responsive Website Template |Men's :: w3layouts</title>
+    <title>TeaWebsite | CTC</title>
     <!--/tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -55,13 +55,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <img src="images/m1.jpg" alt="" class="pro-image-back">
                     </div>
                     <div class="item-info-product ">
-                        <h4><a href="single.html">Product A</a></h4>
+                        <h4><a href="single.html" id="CTCODOXPRODUCTB-name">CTC Product B</a></h4>
                         <div class="info-product-price">
-                            <span class="item_price">$45.99</span>
+                            &#x20B9;<span class="item_price" id="CTCODOXPRODUCTB-price">3.00</span> per gram
                             <!--<del>$69.71</del>-->
                         </div>
                         <div class="snipcart-details top_brand_home_details item_add single-item hvr-outline-out button2">
-                            <a href="single.html">
+                            <a onclick='goSinglesPage("CTCODOXPRODUCTB")'>
                                 <input type="submit" value="Buy Now" class="button"/>
                             </a>
                         </div>
@@ -75,13 +75,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <img src="images/m1.jpg" alt="" class="pro-image-back">
                     </div>
                     <div class="item-info-product ">
-                        <h4><a href="single.html">Product A</a></h4>
+                        <h4><a href="single.html" id="CTCODOXPRODUCTC-name">CTC Product C</a></h4>
                         <div class="info-product-price">
-                            <span class="item_price">$45.99</span>
+                            &#x20B9;<span class="item_price" id="CTCODOXPRODUCTC-price">6.00</span> per gram
                             <!--<del>$69.71</del>-->
                         </div>
                         <div class="snipcart-details top_brand_home_details item_add single-item hvr-outline-out button2">
-                            <a href="single.html">
+                            <a onclick='goSinglesPage("CTCODOXPRODUCTC")'>
                                 <input type="submit" value="Buy Now" class="button"/>
                             </a>
                         </div>
@@ -95,13 +95,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <img src="images/m1.jpg" alt="" class="pro-image-back">
                     </div>
                     <div class="item-info-product ">
-                        <h4><a href="single.html">Product A</a></h4>
+                        <h4><a href="single.html" id="CTCODOXPRODUCTM-name">CTC Product M</a></h4>
                         <div class="info-product-price">
-                            <span class="item_price">$45.99</span>
+                            &#x20B9;<span class="item_price" id="CTCODOXPRODUCTM-price">3.00</span> per gram
                             <!--<del>$69.71</del>-->
                         </div>
                         <div class="snipcart-details top_brand_home_details item_add single-item hvr-outline-out button2">
-                            <a href="single.html">
+                            <a onclick='goSinglesPage("CTCODOXPRODUCTM")'>
                                 <input type="submit" value="Buy Now" class="button"/>
                             </a>
                         </div>
@@ -115,13 +115,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <img src="images/m1.jpg" alt="" class="pro-image-back">
                     </div>
                     <div class="item-info-product ">
-                        <h4><a href="single.html">Product A</a></h4>
+                        <h4><a href="single.html" id="CTCPRODUCTA-name">CTC Product A</a></h4>
                         <div class="info-product-price">
-                            <span class="item_price">$45.99</span>
+                            &#x20B9;<span class="item_price" id="CTCPRODUCTA-price">4.00</span> per gram
                             <!--<del>$69.71</del>-->
                         </div>
                         <div class="snipcart-details top_brand_home_details item_add single-item hvr-outline-out button2">
-                            <a href="single.html">
+                            <a onclick='goSinglesPage("CTCPRODUCTA")'>
                                 <input type="submit" value="Buy Now" class="button"/>
                             </a>
                         </div>
@@ -219,8 +219,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </script>
 <!-- //here ends scrolling icon -->
 
-
 <!-- for bootstrap working -->
 <script type="text/javascript" src="js/bootstrap.js"></script>
+<!-- //for bootstrap working -->
+
+<!-- custom JS for shop/filer-shop page -->
+<script src="js/custom-shopJS.js"></script>
+<!-- //custom JS for shop/filer-shop page -->
+
 </body>
 </html>
