--- a/header.html
+++ b/header.html
@@ -58,7 +58,7 @@
                         <div class="collapse navbar-collapse menu--shylock" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav menu__list">
                                 <li class="active menu__item menu__item--current"><a class="menu__link" href="index.html">Home <span class="sr-only">(current)</span></a></li>
-                                <li class=" menu__item"><a class="menu__link" href="">Shop</a></li>
+                                <li class=" menu__item"><a class="menu__link" href="shop.html">Shop</a></li>
                                 <li class=" menu__item"><a class="menu__link" href="">Contact</a></li>
                             </ul>
                         </div>
