--- a/shop.html
+++ b/shop.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Elite Shoppy an Ecommerce Online Shopping Category Flat Bootstrap Responsive Website Template |Men's :: w3layouts</title>
+    <title>TeaWebsite | Shop</title>
     <!--/tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -32,7 +32,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="css-treeview">
                 <h4>Tea Types</h4>
                 <ul class="tree-list-pad">
-                    <li>
+                    <li onclick="teaTypeFilter('CTC');">
                         <input type="checkbox" checked="checked" id="item-0" />
                         <label for="item-0"><i class="fa fa-long-arrow-right" aria-hidden="true">
                         </i> CTC Tea</label>
@@ -81,7 +81,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="item-info-product ">
                             <h4><a href="single.html" id="CTCPRODUCTA-name">CTC Product A</a></h4>
                             <div class="info-product-price">
-                                <span class="item_price" id="CTCPRODUCTA-price">$45.99</span>
+                                &#x20B9;<span class="item_price" id="CTCPRODUCTA-price">4.00</span> per gram
                                 <!--<del>$69.71</del>-->
                             </div>
                             <div class="snipcart-details top_brand_home_details item_add single-item hvr-outline-out button2">
@@ -100,13 +100,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <img src="images/m1.jpg" alt="" class="pro-image-back">
                         </div>
                         <div class="item-info-product ">
-                            <h4><a href="single.html">Product A</a></h4>
+                            <h4><a href="single.html" id="ORTHODOXPRODUCTB-name">Orthodox Product B</a></h4>
                             <div class="info-product-price">
-                                <span class="item_price">$45.99</span>
+                                &#x20B9;<span class="item_price" id="ORTHODOXPRODUCTB-price">5.00</span> per gram
                                 <!--<del>$69.71</del>-->
                             </div>
                             <div class="snipcart-details top_brand_home_details item_add single-item hvr-outline-out button2">
-                                <a href="single.html">
+                                <a onclick='goSinglesPage("ORTHODOXPRODUCTB")'>
                                     <input type="submit" value="Buy Now" class="button"/>
                                 </a>
                             </div>
@@ -121,13 +121,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <img src="images/m1.jpg" alt="" class="pro-image-back">
                         </div>
                         <div class="item-info-product ">
-                            <h4><a href="single.html">Product A</a></h4>
+                            <h4><a href="single.html" id="CTCODOXPRODUCTB-name">CTC Product B</a></h4>
                             <div class="info-product-price">
-                                <span class="item_price">$45.99</span>
+                                &#x20B9;<span class="item_price" id="CTCODOXPRODUCTB-price">3.00</span> per gram
                                 <!--<del>$69.71</del>-->
                             </div>
                             <div class="snipcart-details top_brand_home_details item_add single-item hvr-outline-out button2">
-                                <a href="single.html">
+                                <a onclick='goSinglesPage("CTCODOXPRODUCTB")'>
                                     <input type="submit" value="Buy Now" class="button"/>
                                 </a>
                             </div>
@@ -324,9 +324,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script type="text/javascript" src="js/bootstrap.js"></script>
 <!-- //for bootstrap working -->
 
-<!-- custom JS for this page -->
+<!-- custom JS for shop/filer-shop page -->
 <script src="js/custom-shopJS.js"></script>
-<!-- //custom JS for this page -->
+<!-- //custom JS for shop/filer-shop page -->
 
 </body>
 </html>
