--- a/header.html
+++ b/header.html
@@ -66,11 +66,25 @@
                 </nav>
             </div>
             <div class="top_nav_right">
-                <div class="box_1">
-                    <button class="glyphicon glyphicon-shopping-cart w3view-cart my-cart-icon">
-                        <span class="badge badge-notify my-cart-badge"></span>
-                    </button>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="box_1">
+                        <div class="login-btn hvr-outline-out">
+                            <span onclick=''>
+                                <h4>Login</h4>
+                            </span>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="box_1">
+                            <button class="glyphicon glyphicon-shopping-cart w3view-cart my-cart-icon">
+                                <span class="badge badge-notify my-cart-badge"></span>
+                            </button>
+                        </div>
+                    </div>
                 </div>
+
             </div>
             <div class="clearfix"></div>
         </div>
