--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <!-- /types_of_tea -->
     <br/><br/>
-    <div class="container">
+    <div class="container index-category-container">
         <h3 class="wthree_text_info">Tea<span> for every mood</span></h3>
         <div class="row">
 
