--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 
 </head>
-<body>
+<body class="index-background">
 
 <nav id="top-header"></nav>
 
@@ -246,17 +246,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         $("#top-header").load("header.html");
         $("#footer").load("footer.html");
     });
-</script>
-<!--<script src=custom-mycart.jsS.js"></script>-->
-<script>
-	// Mini Cart
-	paypal.minicart.render({
-		action: '#'
-	});
-
-	if (~window.location.search.indexOf('reset=true')) {
-		paypal.minicart.reset();
-	}
 </script>
 
 	<!-- //cart-js -->
